# vdtplatform

./: CMakeLists.txt  LICENSE  README.md
include/vdtplatform/: api.h  application.h  fps.h  input.h  input_device.h  input_system.h  keycode.h  platform.h  time.h  timer.h  window.h
include/vdtplatform/api/glfw/: api_glfw.h  application_glfw.h  keycode_utils.h  window_glfw.h
include/vdtplatform/api/null/: api_null.h  application_null.h
include/vdtwindow/: window.h
samples/sandbox/: CMakeLists.txt  main.cpp
source/: api.cpp  application.cpp  fps.cpp  input.cpp  input_system.cpp  time.cpp  timer.cpp  window.cpp
source/api/glfw/: api_glfw.cpp  application_glfw.cpp  keycode_utils.cpp  window_glfw.cpp
source/api/null/: api_null.cpp  application_null.cpp
